# daq

./: .gitignore  NOTES.md  README.md  do_dump.sh
.github/actions/: common.sh
.github/workflows/: build.yml  build_context.yml  reformat_test.yml
context/: Dockerfile  README.md  entry.sh  rogue-env.sh
reformat/: .gitignore  CMakeLists.txt  README.md  usage.md
reformat/HexaBoard/: CMakeLists.txt  config.py
reformat/HexaBoard/app/: hexa_reformat.cxx
reformat/HexaBoard/include/HexaBoard/: HGCROCv2RawData.h  HGCROCv2RawDataFile.h
reformat/HexaBoard/python/: hgcroc.py
reformat/HexaBoard/src/HexaBoard/: HGCROCv2RawData.cxx  HGCROCv2RawDataFile.cxx  hexa_reformat.cxx
reformat/Reformat/: CMakeLists.txt
reformat/Reformat/app/: reformat.cxx
reformat/Reformat/include/Reformat/: Converter.h  RawDataFile.h
reformat/Reformat/python/: reformatcfg.py
reformat/Reformat/src/Reformat/: Converter.cxx
reformat/Reformat/test/: basic.py  test_output.root
reformat/ReformatBase/: CMakeLists.txt
reformat/ReformatBase/app/: reformat.cxx
reformat/ReformatBase/include/ReformatBase/: Converter.h  RawDataChannel.h  RawDataFile.h
reformat/ReformatBase/python/: reformatcfg.py
reformat/ReformatBase/src/ReformatBase/: Bindings.cxx  Converter.cxx  RawDataFile.cxx  TestFile.cxx
reformat/Rogue/: CMakeLists.txt
reformat/Rogue/src/Rogue/: EventWriter.cxx
reformat/UMNTestStand/include/UMNTestStand/: HGCROCv2RawDataFile.h  Reader.h
reformat/UMNTestStand/src/UMNTestStand/: HGCROCv2RawDataFile.cxx
reformat/core/: CMakeLists.txt
reformat/core/include/core/: Converter.h  RawDataChannel.h
reformat/hexaboard/: CMakeLists.txt  README.md
rogue/: .gitignore  README.md
rogue/MyModule/: CMakeLists.txt  MyModule.cpp  README.md
rogue/MyModule/python/: MyWrapper.py
rogue/MyModule/test/: MyTest.py
